force-app/main/default/objects/Asset__c/fields/Asset_Code__c.field-meta.xml
<CustomField>
    <fullName>Asset_Code__c</fullName>
    <label>Asset Code</label>
    <type>AutoNumber</type>
</CustomField>